--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^2.0",
+        "maatwebsite/excel": "^3.1",
         "socialiteproviders/battlenet": "^2.1",
         "socialiteproviders/discord": "^2.0",
         "socialiteproviders/facebook": "^1.0",
